# news-report

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh-CN.md  REVIEW.md  TODOS.md  pyproject.toml  vision.md
.agents/skills/agent-backed-automation/: SKILL.md
.agents/skills/scraping-social-timeline/: SKILL.md
data/: sources.json
docs/: catalog.md  mvp-spec.md  open-questions.md  phase1-roadmap.md
docs/architecture/: social-timeline-skill-packaging.md
docs/designs/: briefing-adapter-foundation.md
examples/: briefing-request.json
news_report/: __init__.py  adapters.py  briefing.py  cache.py  catalog.py  cli.py  formatter.py  mcp_server.py  mock_adapters.py  notifications.py  paths.py
news_report/adapters/: __init__.py  cdp_browser.py  mock.py  rsshub.py
schemas/: briefing-request.schema.json  briefing-response.schema.json  source.schema.json
scripts/: build_catalog.py  generate_briefing.py  run_agent_backend.py  send_notification.py
skills/scraping-social-timeline/: README.md  SKILL.md  mcp.json
tests/: test_adapters.py  test_briefing.py  test_cache.py  test_formatter.py  test_mcp_server.py  test_notifications.py  test_run_agent_backend.py  test_schema_validation.py  test_social_timeline_runtime.py  test_social_timeline_smoke.py
