[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "news-report"
version = "0.1.0"
description = "News Report For User Agent — Agent-oriented information processing middleware"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "jsonschema>=4.20",
]

[project.scripts]
build-catalog = "news_report.cli:build_catalog_cli"
generate-briefing = "news_report.cli:generate_briefing_cli"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["news_report"]

[tool.pytest.ini_options]
testpaths = ["tests"]
